[package]
name = "dll-injection-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[build]
target = ["x86_64-windows-gnu", "i686-pc-windows-gnu"]

[dependencies]
bitflags = "2.6.0"
windows = {version = "0.57", features = [
  "Foundation",
  "Win32",
  "Win32_UI",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System",
  "Win32_System_Memory",
  "Win32_System_Diagnostics",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Threading",
]}
