[package]
name = "win-mem"
version = "0.2.0"
edition = "2021"
authors = ["Aza Maulana <azamaulanaaa@gmail.com>"]
license = "MIT"
keywords = ["memory", "windows", "patch"]
readme = "README.md"

[dependencies]
bitflags = "2.6.0"
windows = {version = "0.57", features = [
  "Foundation",
  "Win32",
  "Win32_System",
  "Win32_System_Memory",
  "Win32_System_Diagnostics",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Threading",
]}
